[Doc] Align CN quickstart Signed-off-by: EsoragotoSpirit <wanglichen@starrocks.com>